--- a/index.html
+++ b/index.html
@@ -161,18 +161,18 @@
             <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
             <rect width="1280" height="900" fill="url(#wood-pattern)" mask="url(#blow-mask)"></rect>
             <g id="js-meets-circles">
-              <circle fill="white" stroke="none" r="92" transform="translate(715,201)" data-x="715" data-y="201"></circle>
-              <circle fill="white" stroke="none" r="50" transform="translate(706,222)" data-x="706" data-y="222"></circle>
-              <circle fill="white" stroke="none" r="100" transform="translate(690,276)" data-x="690" data-y="276"></circle>
-              <circle fill="white" stroke="none" r="87" transform="translate(718,211)" data-x="718" data-y="211"></circle>
-              <circle fill="white" stroke="none" r="50" transform="translate(646,280)" data-x="646" data-y="280"></circle>
-              <circle fill="white" stroke="none" r="80" transform="translate(542,285)" data-x="542" data-y="285"></circle>
-              <circle fill="white" stroke="none" r="90" transform="translate(743,273)" data-x="743" data-y="273"></circle>
-              <circle fill="white" stroke="none" r="98" transform="translate(527,269)" data-x="527" data-y="269"></circle>
-              <circle fill="white" stroke="none" r="89" transform="translate(512,215)" data-x="512" data-y="215"></circle>
-              <circle fill="white" stroke="none" r="91" transform="translate(710,260)" data-x="710" data-y="260"></circle>
-              <circle fill="white" stroke="none" r="95" transform="translate(677,223)" data-x="677" data-y="223"></circle>
-              <circle fill="white" stroke="none" r="55" transform="translate(598,250)" data-x="598" data-y="250"></circle>
+              <circle fill="white" stroke="none" r="60" transform="translate(774,242)" data-x="774" data-y="242"></circle>
+              <circle fill="white" stroke="none" r="87" transform="translate(647,247)" data-x="647" data-y="247"></circle>
+              <circle fill="white" stroke="none" r="66" transform="translate(737,267)" data-x="737" data-y="267"></circle>
+              <circle fill="white" stroke="none" r="75" transform="translate(547,253)" data-x="547" data-y="253"></circle>
+              <circle fill="white" stroke="none" r="89" transform="translate(680,208)" data-x="680" data-y="208"></circle>
+              <circle fill="white" stroke="none" r="97" transform="translate(526,287)" data-x="526" data-y="287"></circle>
+              <circle fill="white" stroke="none" r="73" transform="translate(572,203)" data-x="572" data-y="203"></circle>
+              <circle fill="white" stroke="none" r="81" transform="translate(622,263)" data-x="622" data-y="263"></circle>
+              <circle fill="white" stroke="none" r="74" transform="translate(608,282)" data-x="608" data-y="282"></circle>
+              <circle fill="white" stroke="none" r="57" transform="translate(661,231)" data-x="661" data-y="231"></circle>
+              <circle fill="white" stroke="none" r="69" transform="translate(751,233)" data-x="751" data-y="233"></circle>
+              <circle fill="white" stroke="none" r="60" transform="translate(776,236)" data-x="776" data-y="236"></circle>
             </g>
             <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
             <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -195,7 +195,7 @@
                   <rect fill-opacity="0.1" fill="#000000" x="139" y="25" width="27" height="75" rx="5" class="js-sleeve"></rect>
                   <rect fill="#FFFFFF" x="143" y="20" width="27" height="80" rx="5" class="js-sleeve"></rect>
                   <mask id="right-shirt">
-                    <rect id="js-right-shirt" transform="translate(500,0)" fill="white" rx="5" x="770" y="288" width="282" height="97" class="js-shirt"></rect>
+                    <rect id="js-right-shirt" x="1570" fill="white" rx="5" x2="770" y="288" width="282" height="97" class="js-shirt"></rect>
                   </mask>
                   <rect id="fist-mask" transform="translate(100,42.5)" fill="#FBF7E8" width="40" height="39"></rect>
                 </g>
@@ -221,7 +221,7 @@
                   <rect id="fist-mask" transform="translate(100,40)" fill="#FBF7E8" width="40" height="38.5"></rect>
                 </g>
                 <mask id="left-shirt">
-                  <rect id="js-left-shirt" transform="translate(-500,0)" rx="5" fill="white" x="183" y="280" width="282" height="97" class="js-shirt"></rect>
+                  <rect id="js-left-shirt" x="-500" rx="5" fill="white" x2="183" y="280" width="282" height="97" class="js-shirt"></rect>
                 </mask>
               </g>
               <rect width="1280" height="900" mask="url(#left-shirt)" fill="url(#rose-pattern)"></rect>
@@ -331,26 +331,26 @@
           </g>
           <g id="js-svg" class="h-g">
             <g id="js-svg-circles" class="h-g">
-              <circle fill="white" stroke="" r="0" transform="translate(611,781)" data-x="611" data-y="781"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(433,154)" data-x="433" data-y="154"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(738,417)" data-x="738" data-y="417"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(801,148)" data-x="801" data-y="148"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(732,495)" data-x="732" data-y="495"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(432,533)" data-x="432" data-y="533"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(254,115)" data-x="254" data-y="115"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(589,845)" data-x="589" data-y="845"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(555,291)" data-x="555" data-y="291"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(816,580)" data-x="816" data-y="580"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(578,652)" data-x="578" data-y="652"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(306,127)" data-x="306" data-y="127"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(343,312)" data-x="343" data-y="312"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(315,404)" data-x="315" data-y="404"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(721,431)" data-x="721" data-y="431"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(827,566)" data-x="827" data-y="566"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(681,222)" data-x="681" data-y="222"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(580,312)" data-x="580" data-y="312"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(763,634)" data-x="763" data-y="634"></circle>
-              <circle fill="white" stroke="" r="0" transform="translate(271,101)" data-x="271" data-y="101"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(795,371)" data-x="795" data-y="371"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(504,152)" data-x="504" data-y="152"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(418,181)" data-x="418" data-y="181"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(723,444)" data-x="723" data-y="444"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(554,722)" data-x="554" data-y="722"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(784,676)" data-x="784" data-y="676"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(762,789)" data-x="762" data-y="789"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(462,383)" data-x="462" data-y="383"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(965,790)" data-x="965" data-y="790"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(731,274)" data-x="731" data-y="274"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(537,764)" data-x="537" data-y="764"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(359,540)" data-x="359" data-y="540"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(444,552)" data-x="444" data-y="552"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(661,482)" data-x="661" data-y="482"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(676,488)" data-x="676" data-y="488"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(688,225)" data-x="688" data-y="225"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(342,511)" data-x="342" data-y="511"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(688,208)" data-x="688" data-y="208"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(860,219)" data-x="860" data-y="219"></circle>
+              <circle fill="white" stroke="" r="0" transform="translate(612,336)" data-x="612" data-y="336"></circle>
             </g>
             <mask id="svg-s-mask">
               <g transform="translate(250,0)">
@@ -394,31 +394,31 @@
             </g>
             <rect fill="url(#cheese-pattern)" mask="url(#svg-v-mask)" width="1280" height="900"></rect>
             <g id="js-svg-blow" transform="translate(625,435)" class="h-g">
-              <rect fill="#00C4FF" width="16" height="11"></rect>
-              <rect fill="#9013FE" width="16" height="24"></rect>
-              <rect fill="#FA1C46" width="15" height="15"></rect>
-              <rect fill="#00C4FF" width="14" height="17"></rect>
-              <rect fill="#9013FE" width="19" height="14"></rect>
-              <rect fill="#FA1C46" width="17" height="26"></rect>
-              <rect fill="#00C4FF" width="18" height="14"></rect>
-              <rect fill="#9013FE" width="28" height="28"></rect>
-              <rect fill="#FA1C46" width="26" height="19"></rect>
-              <rect fill="#00C4FF" width="27" height="20"></rect>
-              <rect fill="#9013FE" width="13" height="16"></rect>
-              <rect fill="#FA1C46" width="15" height="12"></rect>
-              <rect fill="#00C4FF" width="25" height="12"></rect>
-              <rect fill="#9013FE" width="23" height="30"></rect>
-              <rect fill="#FA1C46" width="10" height="16"></rect>
-              <rect fill="#00C4FF" width="10" height="23"></rect>
-              <rect fill="#9013FE" width="28" height="21"></rect>
-              <rect fill="#FA1C46" width="21" height="16"></rect>
-              <rect fill="#00C4FF" width="22" height="27"></rect>
-              <rect fill="#9013FE" width="11" height="23"></rect>
-              <rect fill="#FA1C46" width="12" height="14"></rect>
-              <rect fill="#00C4FF" width="27" height="26"></rect>
-              <rect fill="#9013FE" width="13" height="15"></rect>
-              <rect fill="#FA1C46" width="24" height="14"></rect>
-              <rect fill="#00C4FF" width="11" height="20"></rect>
+              <rect fill="#00C4FF" width="23" height="21"></rect>
+              <rect fill="#9013FE" width="11" height="21"></rect>
+              <rect fill="#FA1C46" width="12" height="17"></rect>
+              <rect fill="#00C4FF" width="26" height="20"></rect>
+              <rect fill="#9013FE" width="30" height="24"></rect>
+              <rect fill="#FA1C46" width="14" height="26"></rect>
+              <rect fill="#00C4FF" width="29" height="22"></rect>
+              <rect fill="#9013FE" width="20" height="17"></rect>
+              <rect fill="#FA1C46" width="28" height="23"></rect>
+              <rect fill="#00C4FF" width="13" height="12"></rect>
+              <rect fill="#9013FE" width="23" height="23"></rect>
+              <rect fill="#FA1C46" width="10" height="10"></rect>
+              <rect fill="#00C4FF" width="28" height="26"></rect>
+              <rect fill="#9013FE" width="28" height="16"></rect>
+              <rect fill="#FA1C46" width="29" height="25"></rect>
+              <rect fill="#00C4FF" width="26" height="17"></rect>
+              <rect fill="#9013FE" width="29" height="30"></rect>
+              <rect fill="#FA1C46" width="11" height="13"></rect>
+              <rect fill="#00C4FF" width="24" height="28"></rect>
+              <rect fill="#9013FE" width="16" height="18"></rect>
+              <rect fill="#FA1C46" width="18" height="25"></rect>
+              <rect fill="#00C4FF" width="13" height="13"></rect>
+              <rect fill="#9013FE" width="30" height="24"></rect>
+              <rect fill="#FA1C46" width="30" height="24"></rect>
+              <rect fill="#00C4FF" width="23" height="12"></rect>
             </g>
           </g>
           <g id="js-triangles" class="h-g">
